Fix content too wide on small screens

--- a/src/components/molecules/foot-note/foot-note.scss
+++ b/src/components/molecules/foot-note/foot-note.scss
@@ -7,10 +7,6 @@
   border-left: rem($spacer-s) solid $color-BEG-base;
   display: flex;
 
-  @media only screen and (max-width: $breakpoint-desktop) {
-    width: 100vw;
-  }
-
   &__number {
     padding-right: rem($spacer-s);
   }
