--- a/src/components/molecules/rechner-result-table/rechner-result-table.scss
+++ b/src/components/molecules/rechner-result-table/rechner-result-table.scss
@@ -5,10 +5,6 @@
   border-collapse: separate;
   table-layout: fixed;
 
-  @media only screen and (max-width: $breakpoint-desktop) {
-    width: 100vw;
-  }
-
   th,
   td {
     padding: rem($spacer-s);
