--- a/src/components/molecules/rechner-result/rechner-result.scss
+++ b/src/components/molecules/rechner-result/rechner-result.scss
@@ -36,6 +36,7 @@
   }
 
   @media only screen and (max-width: $breakpoint-desktop) {
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
   }
 }
